fix bugs:cannot entry level2, and cannot show shield image